Add "Change Theme" feature
Change and manage theme, get current theme with shared preferences (not yet adjust the color)

--- a/Gallery/app/src/main/res/values/strings.xml
+++ b/Gallery/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="favorites">Favorites</string>
     <string name="locations">Locations</string>
     <string name="secure_folder">Secure Folder</string>
+    <string name="settings">Settings</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
