--- a/Gallery/app/src/main/res/values-es/strings.xml
+++ b/Gallery/app/src/main/res/values-es/strings.xml
@@ -18,4 +18,11 @@
     <string name="set_as_wallpaper">Establecer como fondo de pantalla</string>
     <string name="create_album">Crear albúm</string>
     <string name="view_by_date">Ver por fecha</string>
+    <string name="view_people">Personas</string>
+    <string name="view_by_people">Ver por personas</string>
+    <string name="change_to_linear_layout">Cambiar a Linear layout</string>
+    <string name="change_to_grid_layout">Cambiar a Grid layout</string>
+    <string name="copy">Dupdo</string>
+    <string name="tag_location">Ubicación de la etiqueta</string>
+    <string name="slideshow">Diapositivas</string>
 </resources>
