--- a/Gallery/app/src/main/res/values-fr/strings.xml
+++ b/Gallery/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,11 @@
     <string name="set_as_wallpaper">Définir en tant que fond décran</string>
     <string name="create_album">Créer un album</string>
     <string name="view_by_date">Voir par date</string>
+    <string name="view_people">Gens</string>
+    <string name="view_by_people">Vue par personne</string>
+    <string name="change_to_linear_layout">Changer pour Linear layout</string>
+    <string name="change_to_grid_layout">Changer pour Grid layout</string>
+    <string name="copy">Copie</string>
+    <string name="tag_location">Emplacement du tag</string>
+    <string name="slideshow">Diaporama</string>
 </resources>
