--- a/Gallery/app/src/main/res/values-ja/strings.xml
+++ b/Gallery/app/src/main/res/values-ja/strings.xml
@@ -18,4 +18,11 @@
     <string name="set_as_wallpaper">壁紙にする</string>
     <string name="create_album">アルバムを作成する</string>
     <string name="view_by_date">日付で表示</string>
+    <string name="view_people">人</string>
+    <string name="view_by_people">人々による表示</string>
+    <string name="change_to_linear_layout">への変更 Linear layout</string>
+    <string name="change_to_grid_layout">への変更 Grid layout</string>
+    <string name="copy">コピー</string>
+    <string name="tag_location">タグの場所</string>
+    <string name="slideshow">スライドショー</string>
 </resources>
