--- a/Gallery/app/src/main/res/values-vi/strings.xml
+++ b/Gallery/app/src/main/res/values-vi/strings.xml
@@ -18,4 +18,11 @@
     <string name="set_as_wallpaper">Đặt làm hình nền</string>
     <string name="create_album">Tạo album</string>
     <string name="view_by_date">Xem theo ngày</string>
+    <string name="view_people">Mọi người</string>
+    <string name="view_by_people">Xem ảnh theo người</string>
+    <string name="change_to_linear_layout">Xem theo Linear layout</string>
+    <string name="change_to_grid_layout">Xem theo Grid layout</string>
+    <string name="copy">Copy</string>
+    <string name="tag_location">Đặt địa điểm</string>
+    <string name="slideshow">Trình chiếu</string>
 </resources>
