--- a/Gallery/app/src/main/res/values/strings.xml
+++ b/Gallery/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
     <string name="set_as_wallpaper">Set as Wallpaper</string>
     <string name="create_album">Create album</string>
     <string name="view_by_date">View by date</string>
+    <string name="view_people">People</string>
+    <string name="view_by_people">View by people</string>
+    <string name="change_to_linear_layout">Change to Linear layout</string>
+    <string name="change_to_grid_layout">Change to Grid layout</string>
+    <string name="copy">Copy</string>
+    <string name="tag_location">Tag location</string>
+    <string name="slideshow">Slideshow</string>
 </resources>
